--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "express": "^5.1.0",
     "express-fileupload": "^1.5.2",
     "express-session": "^1.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.0",
     "multer": "^2.0.2",
     "multer-s3": "^3.0.1",
+    "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10"
   }
 }
